operators/openshift-lightspeed/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-lightspeed
  labels:
    maistra.io/member-of: istio-system
